sms-course-publish-send-tip

--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/sms.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/sms.html.twig
@@ -386,7 +386,7 @@
                             id="js-sms-school-name">{{ '网校通知'|trans }}</span>】{{ '同学们，课程：《课程名称》现已开始报名！%smsSchoolName%链接地址'|trans({'%smsSchoolName%': setting('cloud_sms.sms_school_name')|default('')}) }}
                         ”<br>
                         <span style="color:blue;"> {{ '发送对象:'|trans }}</span><br>
-                        {{ '所有用户（或者班级用户）'|trans }}
+                        {{ '所有用户'|trans }}
                         <br>
                         <span style="color:blue;"> {{ '发送方式:'|trans }}</span><br>
                         {{ '进入后台课程列表页中的［操作］列中进行手动发送。'|trans }}
