已经发布的课程不能修改有效期模式

--- a/src/Topxia/WebBundle/Resources/views/CourseManage/base.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseManage/base.html.twig
@@ -7,7 +7,8 @@
 {% set script_arguments = {
 categoryUrl: path('category_all'),
 tagMatchUrl: path('tag_match'),
-locationUrl: path('location_all')
+locationUrl: path('location_all'),
+isCoursePublished: course.status,
 } %}
 {% block main %}
 
