comment-post-text-fix

--- a/src/Topxia/WebBundle/Resources/views/Review/Widget/subpost-item.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Review/Widget/subpost-item.html.twig
@@ -28,5 +28,6 @@
       <span class="text-muted">{{post.createdTime|smart_time}} </span>
     </div>
     <div class="editor-text">{{ post.content|raw }}</div>
+    <div class="thread-post-interaction">&nbsp;</div>
   </div>
 </li>
