--- a/src/Topxia/WebBundle/Extensions/NotificationTemplate/comment-post.tpl.html.twig
+++ b/src/Topxia/WebBundle/Extensions/NotificationTemplate/comment-post.tpl.html.twig
@@ -6,10 +6,10 @@
     <div class="notification-body">
       {% set data = notification.content %}
       {% if data.targetType == 'classroom' %}
-        {{ '您在班级《%classroom%》中的评论已被回复，'|trans({'%classroom%':data.title}) }}
+        {{ '您在班级《%classroom%》中的评价已被回复，'|trans({'%classroom%':data.title}) }}
         <a href="{{ path('classroom_reviews',{id:data.targetId}) }}">{{'点击查看'|trans}}</a>
       {% else %}
-        {{ '您在课程《%course%》中的评论已被回复，'|trans({'%course%':data.title}) }}
+        {{ '您在课程《%course%》中的评价已被回复，'|trans({'%course%':data.title}) }}
         <a href="{{ path('course_review_list',{id:data.targetId}) }}">{{'点击查看'|trans}}</a>
       {% endif %}
     </div>
