--- a/src/Classroom/ClassroomBundle/Resources/views/Classroom/Review/list.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/Classroom/Review/list.html.twig
@@ -4,6 +4,7 @@
 {% block description %}{{ classroomDescription|default('')|plain_text(100) }}{% endblock %}
 {% block main %}
 	{% set goto = path('classroom_reviews',{id:classroom.id}) %}
+	{% set canAccess = (member and 'headTeacher' in member.role) or 'ROLE_SUPER_ADMIN' in app.user.roles or 'ROLE_ADMIN' in app.user.roles %}
 
   {% include 'TopxiaWebBundle:Review:Widget/list.html.twig' %}
 
