--- a/src/Topxia/WebBundle/Resources/views/Course/reviews.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/reviews.html.twig
@@ -9,6 +9,7 @@
 {% block course_main %}
 
 	{% set goto = path('course_review_list',{id:course.id}) %}
+	{% set canAccess = (member and 'teacher' in member.role) or 'ROLE_SUPER_ADMIN' in app.user.roles or 'ROLE_ADMIN' in app.user.roles %}
 	
   {% include 'TopxiaWebBundle:Review:Widget/list.html.twig' %}
 
