--- a/src/Topxia/WebBundle/Resources/views/Marker/QuestionPreview/fill.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/QuestionPreview/fill.html.twig
@@ -5,21 +5,42 @@
 		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 	</div>
 	<div class="modal-body">
-		<ul class="popup-topic js-topic-content">
+		{#<ul class="popup-topic ">
 			<li class="title">
 				{{ item.question.stem|fill_question_stem_html|bbCode2Html|raw|nl2br }}
 			</li>
 			<div class="testpaper-question-footer clearfix">
-					{% set input_index = 1 %}
-					{% for answer in item.question.answer %}
-						<input class="form-control" readonly type="text" data-type="fill" name="{{ item.question.id }}" placeholder="{{'填空(%input_index%)答案，请填在这里'|trans({'%input_index%': input_index})}}" {% if item.question.testResult.answer[input_index - 1]|default(null) %}value="{{ item.question.testResult.answer[input_index - 1] }}"{% endif %} />
-						{% set input_index = input_index + 1 %}
-					{% endfor %}
+				{% set input_index = 1 %}
+				{% for answer in item.question.answer %}
+					<input class="form-control" readonly type="text" data-type="fill" name="{{ item.question.id }}" placeholder="{{'填空(%input_index%)答案，请填在这里'|trans({'%input_index%': input_index})}}" {% if item.question.testResult.answer[input_index - 1]|default(null) %}value="{{ item.question.testResult.answer[input_index - 1] }}"{% endif %} />
+					{% set input_index = input_index + 1 %}
+				{% endfor %}
 			</div>
+			<li class="title">
+				{{ item.question.stem|bbCode2Html|raw }}
+			</li>
+			<li class="list">
+				<div class="info">{{ item.question.analysis|default('无解析'|trans)|bbCode2Html|raw|nl2br }}</div>
+			</li>
+		</ul>#}
+		<ul class="popup-topic topic-resolve js-topic-content">
+			<li class="title">
+				{{ item.question.stem|fill_question_stem_html|bbCode2Html|raw|nl2br }}
+			</li>
+			<li class="list">
+				<div class="info">
+					{% for index, answer in item.question.answer %}
+					<p>
+						{{'填空(%index%)的正确答案：'| trans({'%index%': index+1})}}
+						<span class="text-success">{{ answer|join(' 或 '|trans) }}</span>
+					</p>
+					{% endfor %}
+				</div>
+			</li>
 		</ul>
 		<ul class="popup-topic topic-resolve js-topic-resolve hidden">
 			<li class="title">
-				{{ item.question.stem|bbCode2Html|raw }}
+				{{ item.question.stem|fill_question_stem_html|bbCode2Html|raw|nl2br }}
 			</li>
 			<li class="list">
 				<div class="info">{{ item.question.analysis|default('无解析'|trans)|bbCode2Html|raw|nl2br }}</div>
@@ -27,13 +48,7 @@
 		</ul>
 	</div>
 	<div class="topic-bottom">
-		<div class="topic-bottom-info">
-			{{ '正确答案是'|trans }}：
-			{% for index, answer in item.question.answer %}
-				<span>
-					{{'填空(%index%)： 正确答案'|trans({'%index%': index+1})}} <strong class="text-success">{{ answer|join(' 或 '|trans) }}</strong>
-				</span>
-			{% endfor %}
+		<div class="topic-bottom-info clearfix">
 			<a class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</a>
 			<a class="btn btn-primary js-show-resolve">查看解析</a>
 		</div>
