--- a/web/assets/v2/less/page/question-tr.less
+++ b/web/assets/v2/less/page/question-tr.less
@@ -106,8 +106,7 @@
       line-height: 40px;
       margin-bottom: 0;
       margin-left: 0;
-      cursor: pointer;
-
+      cursor: move;
       .btn-preview {
         top: 0;
         right: 0;
@@ -307,6 +306,7 @@
           padding: 0 10px;
           margin-bottom: 0;
           text-align:  left;
+          cursor: pointer;
           &:hover {
             background-color: @brand-primary;
           }
