--- a/src/Topxia/AdminBundle/Resources/views/Dictionary/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Dictionary/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'TopxiaAdminBundle::layout.html.twig' %}
 
-{% set menu = 'admin_operation_dictionary' %}
+{% set menu = 'admin_setting_message' %}
 
 {% set script_controller = 'topxiaadminbundle/controller/dictionary/index' %}
 
