--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/app-im-setting.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/app-im-setting.html.twig
@@ -33,10 +33,27 @@
             <span class="text-danger text-sm">{{'抱歉，您尚未接入教育云，不能使用即时聊天服务！'|trans}}</span>
             <p><a href="http://open.edusoho.com/educloud" target="_blank">{{'立即接入'|trans}}</a></p>
           </div>
+        {% elseif data.status == 'unbinded' %}
+          <div class="col-md-2">
+            <button type="submit" class="btn btn-default" name="upload_mode" value="cloud" disabled="disabled">{{'开启即时聊天'|trans}}
+            </button>
+          </div>
+          <div class="col-md-10">
+            <span class="text-danger text-sm">{{'未绑定授权域名不能开通云搜索！'|trans}}</span>
+            <p><a href="{{ path('admin_setting_cloud') }}">{{'立即设置'|trans}}</a></p>
+          </div>
+        {% elseif data.status == 'unbinded' %}
+          <div class="col-md-2">
+            <button type="submit" class="btn btn-default" name="upload_mode" value="cloud" disabled="disabled">{{'开启即时聊天'|trans}}
+            </button>
+          </div>
+          <div class="col-md-10">
+            <span class="text-danger text-sm">{{'未绑定授权域名不能开通云搜索！'|trans}}</span>
+            <p><a href="{{ path('admin_setting_cloud') }}">{{'立即设置'|trans}}</a></p>
+          </div>
         {% else %}
           {% if not setting('app_im.enabled') %}
             <div class="col-md-2 control-cloud">
-              {#<a class="btn btn-primary mhs app-im-open" href="{{ path('admin_app_im_update') }}" data-status="1" data-loading="">{{'开启即时聊天'|trans}}</a>#}
               <button class="btn btn-primary mhs app-im-open" type="submit" data-loading-text="{{'正在启动...'|trans}}" data-url="{{ path('admin_app_im_update') }}" data-status="1">{{'开启即时聊天'|trans}}</button>
             </div>
           {% else %}
@@ -44,7 +61,6 @@
               <span class="text-success">{{'已开启'|trans}}</span>
             </div>
             <div class="controls col-md-8 cloud-warning">
-              {#<a class="btn btn-default btn-sm mhs app-im-close" href="{{ path('admin_app_im_update') }}" data-status="0">{{'关闭'|trans}}</a>#}
               <button class="btn btn-primary mhs app-im-close" type="submit" data-loading-text="{{'正在关闭...'|trans}}" data-url="{{ path('admin_app_im_update') }}" data-status="0">{{'关闭'|trans}}</button>
             </div>
           {% endif %}
