--- a/src/Topxia/AdminBundle/Resources/views/Default/system.status.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/system.status.html.twig
@@ -1,16 +1,30 @@
 <ul class="subfield-list four-subfield clearfix">
+  {% set status = 0 %}
   <li>
     <h3>系统版本</h3>
     <div class="info">
-      <span class="glyphicon glyphicon-ok-sign text-success"></span>
-      <span class="text-lg">7.1.1</span>
+      {% if mainAppUpgrade %}
+        {% set status = 1 %}
+        <span class="glyphicon glyphicon-info-sign text-danger"></span>
+        <a class="text-lg link-underline text-danger" href="{{ path("admin_app_upgrades") }}">更新</a>
+      {% else %}
+        <span class="glyphicon glyphicon-ok-sign text-success"></span>
+        <span class="text-lg">{{ constant('Topxia\\System::VERSION') }}</span>
+      {% endif %}
     </div>
   </li>
   <li>
     <h3>网校应用</h3>
     <div class="info">
-      <span class="glyphicon glyphicon-info-sign text-danger"></span>
-      <a class="text-lg link-underline text-danger" href="">2个未更新</a>
+      {% if app_count %}
+        <span class="glyphicon glyphicon-info-sign text-danger"></span>
+        <a class="text-lg link-underline text-danger" href="{{ path("admin_app_upgrades") }}"> {{ app_count - status }}
+          个未更新</a>
+      {% else %}
+        <span class="glyphicon glyphicon-ok-sign text-success"></span>
+        <span class="text-lg">已更新</span>
+      {% endif %}
+
     </div>
   </li>
   <li>
@@ -18,30 +32,55 @@
     <div class="info">
       <span class="glyphicon glyphicon-info-sign text-danger"></span>
       <span class="status-card-warp">
-        <a class="text-lg link-underline text-danger" href="">
-          2个未开启
+        {% if   cloudServiceCount > 0 %}
+          <a class="text-lg link-underline text-danger" href="">
+          {{ cloudServiceCount }}个未开启
         </a>
+        {% else %}
+          <span class="value value-success"><i class="dot"></i>已开启</span>
+        {% endif %}
+
         <div class="status-card">
           <ul class="open-serve-list">
             <li>
               <span class="key">云视频</span>
-              <span class="value value-success"><i class="dot"></i>已开启</span>
+              {% if setting('storageSetting.upload_mode') == "cloud" %}
+                <span class="value value-success"><i class="dot"></i>已开启</span>
+              {% else %}
+                <a href="{{ path('admin_setting_cloud_video') }}" class="value value-danger"><i class="dot"></i>未开启</a>
+              {% endif %}
             </li>
             <li>
               <span class="key">云文档</span>
-              <span class="value value-success"><i class="dot"></i>已开启</span>
+              {% if setting('storageSetting.upload_mode') == "cloud" %}
+                <span class="value value-success"><i class="dot"></i>已开启</span>
+              {% else %}
+                <a href="{{ path('admin_setting_cloud_video') }}" class="value value-danger"><i class="dot"></i>未开启</a>
+              {% endif %}
             </li>
             <li>
               <span class="key">云直播</span>
-              <span class="value value-success"><i class="dot"></i>已开启</span>
+              {% if setting('course.live_course_enabled') %}
+                <span class="value value-success"><i class="dot"></i>已开启</span>
+              {% else %}
+                <a href="{{ path('admin_setting_live_course_setting') }}" class="value value-danger"><i class="dot"></i>未开启</a>
+              {% endif %}
             </li>
             <li>
               <span class="key">云短信</span>
-              <a href="" class="value value-danger"><i class="dot"></i>未开启</a>
+              {% if  setting('cloud_sms.sms_enabled')|default('0') == "1" %}
+                <span class="value value-success"><i class="dot"></i>已开启</span>
+              {% else %}
+                <a href="{{ path('admin_edu_cloud_sms') }}" class="value value-danger"><i class="dot"></i>未开启</a>
+              {% endif %}
             </li>
             <li>
               <span class="key">云搜索</span>
-              <a href="" class="value value-danger"><i class="dot"></i>未开启</a>
+              {% if setting('cloud_search.search_enabled') %}
+                <span class="value value-success"><i class="dot"></i>已开启</span>
+              {% else %}
+                <a href="{{ path('admin_edu_cloud_search') }}" class="value value-danger"><i class="dot"></i>未开启</a>
+              {% endif %}
             </li>
           </ul>
         </div>
@@ -51,8 +90,13 @@
   <li>
     <h3>移动客户端</h3>
     <div class="info">
-      <span class="glyphicon glyphicon-ok-sign text-success"></span>
-      <span class="text-lg">已开启</span>
+      {% if setting("mobile").enabled|default(null) %}
+        <span class="glyphicon glyphicon-ok-sign text-success"></span>
+        <span class="text-lg">已开启</span>
+      {% else %}
+        <span class="glyphicon glyphicon-info-sign text-danger"></span>
+        <span class="text-lg">未开启</span>
+      {% endif %}
     </div>
   </li>
 </ul>
