网站概览数据

--- a/src/Topxia/AdminBundle/Resources/views/Default/operation-analysis-dashbord.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/operation-analysis-dashbord.html.twig
@@ -2,58 +2,58 @@
   <li>
     <h3>{{ '登录用户'|trans }}</h3>
     <a href="" class="number">
-      {{loginCount}}
+      {{ loginCount }}
     </a>
-    <p>{{ '在线总数'|trans }}: {{onlineCount}}</p>
+    <p>{{ '在线总数'|trans }}: {{ onlineCount }}</p>
   </li>
   <li>
     <h3>{{ '今日新增注册'|trans }}</h3>
     <a href="" class="number">
-      {{todayRegisterNum}}
+      {{ todayRegisterNum }}
     </a>
-    <p>{{ '注册总数'|trans }}: 10000</p>
+    <p>{{ '注册总数'|trans }}: {{ totalRegisterNum }}</p>
   </li>
   <li>
     <h3>{{ '今日课程新增学员'|trans }}</h3>
     <a href="" class="number">
-      23546
+      {{ todayCourseMemberNum }}
     </a>
-    <p>{{ '总课程学习人次'|trans }}: 10000</p>
+    <p>{{ '总课程学习人次'|trans }}: {{ totalCourseMemberNum }}</p>
   </li>
   <li>
     <h3>{{ '今日班级新增学员'|trans }}</h3>
     <a href="" class="number">
-      23546
+      {{ todayClassroomMemberNum }}
     </a>
-    <p>{{ '总班级学习人次'|trans }}: 10000</p>
+    <p>{{ '总班级学习人次'|trans }}: {{ totalClassroomMemberNum }}</p>
   </li>
   <li>
     <h3>{{ '今日新增会员'|trans }}</h3>
     <a href="" class="number">
-      23546
+      {{ todayVipNum }}
     </a>
-    <p>{{ '总会员数'|trans }}: 10000</p>
+    <p>{{ '总会员数'|trans }}: {{ totalVipNum }}</p>
   </li>
   <li>
     <h3>{{ '今日回答未回复'|trans }}</h3>
     <a href="" class="number">
-      11/12
+      {{ todayThreadNum }}/{{ todayThreadUnAnswerNum }}
     </a>
-    <p>{{ '总问答数'|trans }}: 10000</p>
+    <p>{{ '总问答数'|trans }}: {{ totalThreadNum }}</p>
   </li>
   <li>
     <h3>{{ '已发布课程'|trans }}</h3>
     <a href="" class="number">
-      23546
+      {{ publishedCourseNum }}
     </a>
-    <p>{{ '总课程数'|trans }}: 10000</p>
+    <p>{{ '总课程数'|trans }}: {{ totalCourseNum }}</p>
   </li>
   <li>
     <h3>{{ '已发布班级'|trans }}</h3>
     <a href="" class="number">
-      23546
+      {{ publishedClassroomNum }}
     </a>
-    <p>{{ '总班级数'|trans }}: 10000</p>
+    <p>{{ '总班级数'|trans }}: {{ totalClassroomNum }}</p>
   </li>
 </ul>
 
