--- a/src/CourseTask/TaskBundle/Resources/views/TaskManage/list.html.twig
+++ b/src/CourseTask/TaskBundle/Resources/views/TaskManage/list.html.twig
@@ -1,12 +1,16 @@
 {% extends 'TopxiaWebBundle::layout.html.twig' %}
 
+{% set script_controller = 'taskbundle/controller/task-manage/tasks' %}
+
 {% block title %}{{'教学计划管理'|trans}} - {{ parent() }}{% endblock %}
 
 {% block content %}
 	<button class="btn btn-info btn-sm" id="lesson-create-btn" data-toggle="modal" data-target="#modal" data-backdrop="static" data-keyboard="false" data-url="{{ path('course_task_create', {courseId:1}) }}"><i class="glyphicon glyphicon-plus"></i> 任务 </button>
 
-	{% for task in tasks %}
-		{% include 'TaskBundle:TaskManage:list-item.html.twig' with {task:task} %}
-	{% endfor %}
+	<ul id="course-tasks">
+		{% for task in tasks %}
+			{% include 'TaskBundle:TaskManage:list-item.html.twig' with {task:task} %}
+		{% endfor %}
+	</ul>
 	
 {% endblock %}
